# algdat

./: .gitignore  LICENSE  README.md  RelationProperties.java  oving10.py
mylib/: dijkstra.cpp  dijkstra.hpp  graph.cpp  graph.hpp  heap.cpp  heap.hpp  heap_impl.hpp  sort.cpp  sort.hpp  sort_impl.hpp  test.cpp  timeit.cpp  timeit.hpp  timeit_impl.hpp
oving1/: CMakeLists.txt  main.cpp
oving11/: Automat.py
oving12/: CMakeLists.txt  compress.cpp  constants.hpp  decompress.cpp  huffman_tree.cpp  huffman_tree.hpp  test.cpp  test.sh
oving12/test_in/: diverse.txt  opg12.tex  opg12.txt
oving13/: CMakeLists.txt  astar.cpp  astar.hpp  astar_s.cpp  astar_s.hpp  dijkstra.cpp  dijkstra.hpp  dijkstra_s.cpp  dijkstra_s.hpp  drawmaps.py  graph.cpp  graph.hpp  main.cpp
oving2/: CMakeLists.txt  svar.cpp  svar.py
oving3/: CMakeLists.txt  graf.py  svar.cpp
oving4/: CMakeLists.txt  NumberDoubleLinkedList.cpp  NumberDoubleLinkedList.hpp  NumberDoubleLinkedListPointer.cpp  NumberDoubleLinkedListPointer.hpp  del1.cpp  del2.py  del3.cpp  graf.py
oving5/: CMakeLists.txt  del1.cpp  del2.cpp  hashTest.py
oving7/: CMakeLists.txt  L7g6  main.cpp  main.py
oving8/: CMakeLists.txt  main.cpp
oving8/graphs/: vg1  vg2  vg3
